<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="8dp"
	android:layout_marginBottom="8dp">
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp">
	
	<ImageView
		android:id="@+id/img_poster"
		android:layout_width="80dp"
		android:layout_height="120dp"
		android:scaleType="fitXY"/>
	
	<TextView
		android:id="@+id/txt_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="26dp"
		android:layout_toEndOf="@+id/img_poster"
		android:text="@string/title"
		android:textSize="18sp"
		android:textStyle="bold"/>
	
	<TextView
		android:id="@+id/txt_year"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/txt_title"
		android:layout_marginStart="26dp"
		android:layout_toEndOf="@id/img_poster"
		android:text="@string/year"
		android:textStyle="italic"/>
	
	<TextView
		android:id="@+id/txt_overview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_year"
		android:layout_marginStart="26dp"
		android:layout_marginTop="16dp"
		android:layout_toEndOf="@id/img_poster"
		android:ellipsize="end"
		android:maxLines="3"
		android:text="@string/overview"/>
	
	</RelativeLayout>

</androidx.cardview.widget.CardView>